<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="*"
    android:stretchColumns="*"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="303dp"
            android:gravity="center">

            <ImageButton
                android:id="@+id/imageMessage"
                android:layout_width="241dp"
                android:layout_height="246dp"
                android:background="@drawable/login_icon"
                android:gravity="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="fill_horizontal">

            <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25sp"
                android:gravity="start"
                android:background="#DFDCDC"
                android:textColor="#959595"
                android:padding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="#959595" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal">

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:gravity="start"
                android:background="#DFDCDC"
                android:textColor="#959595"
                android:padding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="#959595" />
        </TableRow>

        <TableRow
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal">

            <Button
                android:id="@+id/efetuar_login"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                app:backgroundTint="#93C8B8"
                android:onClick="efetuar_login"
                android:text="@string/login"/>
        </TableRow>

        <TableRow
            android:id="@+id/log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="30dp"
                android:onClick="registrar_usuario"
                android:text="@string/registrar"
                android:textStyle="bold"
                android:textColor="#053C3C"
                android:textSize="25sp"
                android:gravity="center" />
        </TableRow>

    </TableLayout>

</ScrollView>