<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".view.NovaViagem">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal">

                <EditText
                    android:id="@+id/destino_viagem"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:gravity="start"
                    android:background="#EDEDED"
                    android:textColor="#0C0C0C"
                    android:padding="10dp"
                    android:text=""
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="fill_horizontal">

                <EditText
                    android:id="@+id/tipo_viagem"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:gravity="start"
                    android:background="#EDEDED"
                    android:textColor="#0C0C0C"
                    android:padding="10dp"
                    android:text=""
                    android:inputType="text"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="fill_horizontal">

                <EditText
                    android:id="@+id/data_chegada"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:gravity="start"
                    android:background="#EDEDED"
                    android:textColor="#0C0C0C"
                    android:padding="10dp"
                    android:text=""
                    android:inputType="text" />
            </TableRow>

             <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="fill_horizontal">

                <EditText
                    android:id="@+id/data_partida"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:gravity="start"
                    android:background="#EDEDED"
                    android:textColor="#0C0C0C"
                    android:padding="10dp"
                    android:text=""
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="fill_horizontal">

                <EditText
                    android:id="@+id/orcamento_viagem"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:gravity="start"
                    android:background="#EDEDED"
                    android:textColor="#0C0C0C"
                    android:padding="10dp"
                    android:text=""
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="fill_horizontal">

                <Button
                    android:id="@+id/salvar_nova_viagem"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:layout_margin="2dp"
                    android:text="@string/salvar"/>
                <Button
                    android:id="@+id/deletar_nova_viagem"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:layout_margin="2dp"
                    android:text="@string/deletar"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="fill_horizontal">

                <Button
                    android:id="@+id/listar_gastos"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:layout_margin="2dp"
                    android:text="@string/gastos"/>

                <Button
                    android:id="@+id/voltar"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:layout_margin="2dp"
                    android:text="@string/voltar"/>
            </TableRow>
        </TableLayout>

    </ScrollView>

</FrameLayout>